[package]
name = "enum-tryfrom"
version = "0.1.1"
authors = ["Kai Wohlfahrt <kai.scorpio@gmail.com>"]
description = "Error types and traits for use with enum-tryfrom-derive"
license = "MIT"
repository = "https://github.com/kwohlfahrt/enum-tryfrom"
readme = "README.md"

[badges]
travis-ci = { repository = "https://github.com/kwohlfahrt/enum-tryfrom" }

[workspace]
members = ["derive"]

[dependencies]
clippy = {version = "*", optional = true}
compiletest_rs = {version = "*", optional = true}

[features]
default = []
compiletest = ["compiletest_rs"]

[dev-dependencies]
# For tests & benchmarks
enum-tryfrom-derive = { path = "derive", version = "0.1" }
# For benchmarks
rand = "0.3"
