[package]
name = "enum-tryfrom"
version = "0.1.2"
authors = ["Kai Wohlfahrt <kai.wohlfahrt@gmail.com>"]
description = "Error types and traits for use with enum-tryfrom-derive"
license = "MIT"
repository = "https://github.com/kwohlfahrt/enum-tryfrom"
readme = "README.md"

[badges]
travis-ci = { repository = "https://github.com/kwohlfahrt/enum-tryfrom" }

[workspace]
members = ["derive"]

[features]
default = []

[dev-dependencies]
enum-tryfrom-derive = { path = "derive", version = "0.1" }
# For tests
compiletest_rs = { version = "0.3" }
# For benchmarks
rand = "0.4"
